k8s/applications/utils/paperless/Deployment.gotenberg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg
  namespace: paperless
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gotenberg
      app.kubernetes.io/version: stable
      app.kubernetes.io/component: document-conversion
      app.kubernetes.io/part-of: paperless
      # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: paperless
      labels:
        app.kubernetes.io/name: gotenberg
        app.kubernetes.io/version: stable
        app.kubernetes.io/component: document-conversion
        app.kubernetes.io/part-of: paperless
        # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: gotenberg
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: gotenberg
          # Dockerfile: https://github.com/gotenberg/gotenberg/blob/main/build/Dockerfile
          image: docker.io/gotenberg/gotenberg:8.37@sha256:f29984bd1e226bf1b93ba90af06000afa8b315853e99d27b9aaa41b93f15c769
          args:
            - gotenberg
            - --chromium-disable-javascript=true
            - --chromium-allow-list=file:///tmp/.*
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 64Mi}
            limits: {memory: 128Mi}
          ports:
            - {name: http, protocol: TCP, containerPort: 3000}
          startupProbe: {httpGet: {port: 3000, path: /health}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {httpGet: {port: 3000, path: /health}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {httpGet: {port: 3000, path: /health}, initialDelaySeconds: 10, periodSeconds: 120}
