k8s/applications/utils/paperless/Deployment.tika.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: paperless
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tika
      app.kubernetes.io/version: stable
      app.kubernetes.io/component: content-extraction
      app.kubernetes.io/part-of: paperless
      # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: paperless
      labels:
        app.kubernetes.io/name: tika
        app.kubernetes.io/version: stable
        app.kubernetes.io/component: content-extraction
        app.kubernetes.io/part-of: paperless
        # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: tika
      securityContext:
        runAsNonRoot: true
        runAsUser: 35002
        runAsGroup: 35002
        fsGroup: 35002
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: tika
          # Dockerfile: https://github.com/apache/tika-docker/blob/main/minimal/Dockerfile
          image: index.docker.io/apache/tika:3.3.0.0-full
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 256Mi}
            limits: {memory: 256Mi}
          ports:
            - {name: http, protocol: TCP, containerPort: 9998}
          startupProbe: {httpGet: {port: 9998, path: /}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {httpGet: {port: 9998, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {httpGet: {port: 9998, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          volumeMounts:
            - {name: tika-tmp-volume, mountPath: /tmp}
      volumes:
        - {name: tika-tmp-volume, emptyDir: {}}
