k8s/applications/utils/paperless/Deployment.yaml
# Rootless? https://github.com/paperless-ngx/paperless-ngx/discussions/4019
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      namespace: paperless
      labels:
        app.kubernetes.io/name: paperless
        app: paperless
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: gotenberg
          image: index.docker.io/gotenberg/gotenberg:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            fsGroup: 1001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          args:
            - gotenberg
            - --chromium-disable-javascript=true
            - --chromium-allow-list=file:///tmp/.*
          ports:
            - containerPort: 3000

        - name: tika
          image: index.docker.io/apache/tika:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 35002
            runAsGroup: 35002
            fsGroup: 35002
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 9998

        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsGroup: 1003
            fsGroup: 1003
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /data/data
              name: paperless-data
            - mountPath: /data/media
              name: paperless-media
            - mountPath: /data/export
              name: paperless-export
            - mountPath: /data/consume
              name: paperless-consume
      volumes:
        - name: paperless-consume
          persistentVolumeClaim:
            claimName: longhorn-paperless-consume-pvc
        - name: paperless-data
          persistentVolumeClaim:
            claimName: longhorn-paperless-data-pvc
        - name: paperless-export
          persistentVolumeClaim:
            claimName: longhorn-paperless-export-pvc
        - name: paperless-media
          persistentVolumeClaim:
            claimName: longhorn-paperless-media-pvc
