k8s/applications/utils/paperless/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: paperless
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
