k8s/applications/utils/paperless/SecurityPolicy.yaml
# Cross namespace attachment?
# - https://github.com/envoyproxy/gateway/issues/5143
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: allow-all-http
  namespace: paperless
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute, name: web}
  # authorization: {defaultAction: Allow}
  extAuth:
    failOpen: false
    grpc: {backendRefs: [{group: '', kind: Service, namespace: envoy-gateway-system, name: envoy-proxy-bouncer-karlsenapp, port: 8080}]}
