k8s/applications/utils/paperless/CiliumNetworkPolicy.gotenberg.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubelet-probes-gotenberg
  namespace: paperless
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: gotenberg}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '3000', protocol: TCP}]]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gotenberg-ingress
  namespace: paperless
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: gotenberg}}
  ingress:
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: paperless, app.kubernetes.io/name: paperless}], toPorts: [ports: [{port: '3000', protocol: TCP}]]}
