k8s/applications/utils/paperless/CiliumNetworkPolicy.main.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: paperless
spec:
  endpointSelector: {}
  ingress: []
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: paperless
spec:
  endpointSelector: {}
  egress:
    - toEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns}]
      toPorts: [{ports: [{port: '53', protocol: TCP}, {port: '53', protocol: UDP}], rules: {dns: [{matchPattern: '*'}]}}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubelet-probes
  namespace: paperless
spec:
  endpointSelector: {}
  ingress:
    - fromEntities: [host]
      toPorts:
        - ports:
            - {port: '8000', protocol: TCP}  # paperless webserver
            - {port: '9998', protocol: TCP}  # tika
            - {port: '3000', protocol: TCP}  # gotenberg
            - {port: '6379', protocol: TCP}  # valkey
