k8s/applications/utils/paperless/CiliumNetworkPolicy.paperless.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-paperless-ingress
  namespace: paperless
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: paperless}}
  ingress:
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}], toPorts: [ports: [{port: '8000', protocol: TCP}]]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-paperless-egress
  namespace: paperless
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: paperless}}
  egress:
    - {toEndpoints: [matchLabels: {app.kubernetes.io/name: valkey}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
    - {toEndpoints: [matchLabels: {app.kubernetes.io/name: tika}], toPorts: [ports: [{port: '9998', protocol: TCP}]]}
    - {toEndpoints: [matchLabels: {app.kubernetes.io/name: gotenberg}], toPorts: [ports: [{port: '3000', protocol: TCP}]]}
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}}], toPorts: [ports: [{port: '443', protocol: TCP}]]}  # Needed for OIDC / Authelia
    - {toFQDNs: [matchName: db02.hera.home.karlsen.fr], toPorts: [ports: [{port: '5432', protocol: TCP}]]}
    - {toFQDNs: [matchName: smtp.domeneshop.no], toPorts: [ports: [{port: '465', protocol: TCP}]]}
