k8s/applications/utils/paperless/CiliumNetworkPolicy.tessdata-sync.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-github-egress
  namespace: paperless
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: tessdata-sync}}
  egress:
    - {toFQDNs: [{matchName: github.com}, {matchName: objects.githubusercontent.com}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
