k8s/applications/utils/paperless/CiliumNetworkPolicy.tika.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubelet-probes-tika
  namespace: paperless
spec:
  endpointSelector: {}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '9998', protocol: TCP}]]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-tika-ingress
  namespace: paperless
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: tika}}
  ingress:
    - {fromEndpoints: [matchLabels: {app.kubernetes.io/name: paperless}], toPorts: [ports: [{port: '9998', protocol: TCP}]]}
