k8s/applications/utils/paperless/CiliumNetworkPolicy.valkey.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-valkey-ingress
  namespace: paperless
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: valkey}}
  ingress:
    - {fromEndpoints: [matchLabels: {app.kubernetes.io/name: paperless}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
